[package]
name = "payjoin"
version = "0.25.0"
authors = ["Dan Gould <d@ngould.dev>"]
description = "Payjoin Library implementing BIP 78 and BIP 77 batching protocols."
repository = "https://github.com/payjoin/rust-payjoin"
readme = "../README.md"
keywords = ["bip78", "payjoin", "bitcoin"]
categories = [
  "api-bindings",
  "cryptography::cryptocurrencies",
  "network-programming",
]
license = "MITNFA"
resolver = "2"
edition = "2021"
rust-version = "1.85"
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["v2"]
#[doc = "Core features for payjoin state machines"]
_core = [
  "bitcoin/rand-std",
  "dep:http",
  "serde_json",
  "url/serde",
  "bitcoin_uri",
  "serde",
  "bitcoin/serde",
]
directory = []
v1 = ["_core"]
v2 = ["_core", "hpke", "bhttp", "ohttp", "directory"]
#[doc = "Functions to fetch OHTTP keys via CONNECT proxy using reqwest. Enables `v2` since only `v2` uses OHTTP."]
io = ["v2", "reqwest/rustls-tls"]
_manual-tls = ["reqwest/rustls-tls", "rustls"]
_test-utils = []

[dependencies]
bhttp = { version = "0.6.1", optional = true }
bitcoin = { version = "0.32.7", features = ["base64"] }
bitcoin_uri = { version = "0.1.0", optional = true }
hpke = { package = "bitcoin-hpke", version = "0.13.0", optional = true }
http = { version = "1.3.1", optional = true }
ohttp = { package = "bitcoin-ohttp", version = "0.6.0", optional = true }
reqwest = { version = "0.12.23", default-features = false, optional = true }
rustls = { version = "0.23.31", optional = true, default-features = false, features = [
  "ring",
] }
serde = { version = "1.0.219", default-features = false, optional = true, features = ["derive"] }
serde_json = { version = "1.0.142", optional = true }
tracing = "0.1.41"
url = { version = "2.5.4", optional = true, default-features = false, features = [
  "serde",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
js-sys = "0.3.85"
gloo-net = { version = "0.6.0", features = ["io-util"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
ring = { version = "0.17.14", default-features = false, features = ["wasm32_unknown_unknown_js"] }
futures = { version = "0.3.28"}
futures-rustls = { version = "0.26.0", default-features = false, features = ["ring"] }
webpki-roots = "1.0.5"
rustls-pki-types = { version = "1.14.0", default-features = false, features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
base64 = "0.21"

[dev-dependencies]
once_cell = "1.21.3"
payjoin-test-utils = { version = "0.0.1" }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
