[package]
name = "payjoin"
version = "1.0.0-rc.3"
authors = ["Dan Gould <d@ngould.dev>"]
description = "Payjoin Library implementing BIP 78 and BIP 77 batching protocols."
repository = "https://github.com/payjoin/rust-payjoin"
readme = "../README.md"
keywords = ["bip78", "payjoin", "bitcoin"]
categories = [
  "api-bindings",
  "cryptography::cryptocurrencies",
  "network-programming",
]
license = "MITNFA"
edition = "2021"
rust-version = "1.85"
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "v2", "v2-ohttp"]

alloc = []

std = [
  "alloc",
  "bitcoin/rand",
  "bitcoin/rand-std",
  "bitcoin/base64",
  "serde_json",
  "dep:percent-encoding-rfc3986",
  "bitcoin_uri",
]
#[doc = "Core features for payjoin state machines"]
_core = ["alloc", "serde", "bitcoin/serde"]

directory = ["alloc", "_core"]
v1 = ["_core", "std"]

v2 = ["_core", "directory", "hkdf"]

v2-ohttp = ["v2", "std", "dep:hpke", "dep:bhttp", "dep:ohttp", "dep:http"]
#[doc = "Functions to fetch OHTTP keys via CONNECT proxy using reqwest. Enables `v2` since only `v2` uses OHTTP."]
io = ["v2-ohttp", "reqwest/rustls-tls", "dep:reqwest"]
_manual-tls = ["reqwest/rustls-tls", "rustls"]

[dependencies]
bhttp = { version = "0.6.1", optional = true }
bitcoin = { version = "0.32.9", default-features = false }
bitcoin-units = { version = "0.1.3", default-features = false }
bitcoin_uri = { version = "0.1.0", optional = true }
hkdf = { version = "0.12.3", optional = true }
hpke = { package = "bitcoin-hpke", version = "0.13.0", optional = true }
http = { version = "1.3.1", optional = true }
ohttp = { package = "bitcoin-ohttp", version = "0.6.0", optional = true }
percent-encoding-rfc3986 = { version = "0.1.3", optional = true }
reqwest = { version = "0.12.23", default-features = false, optional = true }
rustls = { version = "0.23.38", optional = true, default-features = false, features = [
  "ring",
] }
serde = { version = "1.0.228", default-features = false, optional = true }
serde_json = { version = "1.0.149", optional = true }
tracing = { version = "0.1.41", default-features = false, features = [
  "attributes",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"

# bitcoin-units and hkdf are transient dependencies that need to be specified for our MSRV
[package.metadata.cargo-machete]
ignored = ["bitcoin-units", "hkdf"]

[dev-dependencies]
once_cell = "1.21.3"
payjoin-test-utils = { path = "../payjoin-test-utils", features = ["v2"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = { version = "0.1.41", default-features = false, features = [
  "attributes",
] }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
