[package]
name = "payjoind"
version = "0.1.0"
authors = ["Dan Gould <d@ngoulg.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
payjoin = { path = "../payjoin", features = ["sender"] }
bitcoincore-rpc = "0.14.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
base64 = "0.13.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"