[workspace]

[package]
name = "payjoin-ffi-wrapper"
description = "This is a simple wrapper crate which re-exports payjoin-ffi for publishing to pub.dev"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
_test-utils = ["payjoin-ffi/_test-utils"]

[lib]
name = "payjoin_ffi_wrapper"
crate-type = ["staticlib", "cdylib"]

[dependencies]
payjoin-ffi = { git = "https://github.com/payjoin/rust-payjoin.git", branch = "master", features = [
  "dart",
] }

[patch."https://github.com/payjoin/rust-payjoin.git"]
payjoin-ffi = { path = "../.." }

[patch.crates-io]
ohttp-relay = { path = "../../../ohttp-relay" }
payjoin = { path = "../../../payjoin" }
payjoin-directory = { path = "../../../payjoin-directory" }
payjoin-service = { path = "../../../payjoin-service" }
payjoin-test-utils = { path = "../../../payjoin-test-utils" }
