[package]
name = "payjoin-test-utils-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.16.17"
napi-derive = "2.16.13"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }

icu_locale_core = "=2.0.1"
icu_provider = "=2.0.0"

# icu deps are ignored here because they're required to be pinned as transitive deps of url
# Even though they may appear unused in the default feature set, they are legitimate dependencies.
[package.metadata.cargo-machete]
ignored = ["icu_provider", "icu_locale_core"]

[dependencies.payjoin-test-utils]
path = "../../../payjoin-test-utils"

[build-dependencies]
napi-build = "=2.2.4"

[patch.crates-io.payjoin]
path = "../../../payjoin"

[patch.crates-io.payjoin-mailroom]
path = "../../../payjoin-mailroom"

[patch.crates-io.payjoin-test-utils]
path = "../../../payjoin-test-utils"

[workspace]
